# Anveshak_codebase_2025

./: CMakeLists.txt  Full_Potential_Steering_Auto_ROS2.py  README.md  apf.py  aruco_approach_1a.py  bevel_arm.py  cantest_with_threading_8_original.py  irc_autonomous.py  joy.launch.py  package.xml
ComputerVisionAndYOLO_stack/colour_matching/: train.py
ComputerVisionAndYOLO_stack/data/Cone detection.v2i.yolov8/: data.yaml
ComputerVisionAndYOLO_stack/misc/: cam.py  cv_bbox_test.py  lowlatcam.py
ComputerVisionAndYOLO_stack/zed/: crop_zed_images.py  get_zed_images.py  go_to_cone.py  yolo_publisher.py  yolo_publisher_lab.py  yolo_publisher_v3.py  yolo_publisher_v4.py  yolo_realtime.py  zed_similarity.py
launch/: rover_run.launch.py
previous_versions/: fpsa_ackermann.py
previous_versions/full_pot_steering/: Full_Potential_Steering_Auto_corrected.py  pop.py
scripts/: Full_Potential_Steering_Auto_ROS2.py  IMOUcamera.py  autonomous_control_node.py  bevel_arm.py  camera.py  can_node_ROS2.py  cantest_with_threading_8_original.py  cone detection_1.py  fpsa_ackermann.py  gps_odom_go_to_goal.py  gps_odom_with_DWA.py  groom_ROS2.py  net_map.py
scripts/PurePursuit/: path_follow_pure_pursuit.py  path_generator.py  utils_angle.py  utils_plot.py
scripts/gps_path_follower/: Full_Potential_Steering_Auto_ROS2.py  mastercode_odom.py  path_follow_pure_pursuit.py  path_generator.py
scritps/: Full_Potential_Steering_Auto_ROS2.py
